# agent-ui

backend/: .env  pyproject.toml
backend/src/api/: auth_config.py  server.py
backend/src/terminal_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
