[project]
name = "terminal-chat"
version = "0.1.0"
description = "Terminal Chat Application"
requires-python = ">=3.8"
dependencies = [
    "types-tabulate",
    "types-docker",
    "azure-identity",
    "docker"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"